<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="hu.bme.aut.shopper.viewmodel.UpdateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/itemTitle"
            app:layout_constraintStart_toStartOf="@+id/itemTitle" />

        <EditText
            android:id="@+id/itemTitle"
            android:layout_width="380dp"
            android:layout_height="49dp"
            android:layout_marginTop="80dp"
            android:autofillHints="Title"
            android:background="@color/gray"
            android:ems="10"
            android:inputType="text"
            android:padding="10sp"
            android:text="@={viewModel.content}"

            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.032"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/first_names" />

        <TextView
            android:layout_width="107dp"
            android:layout_height="40dp"
            android:text="@string/description"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/itemDescription"
            app:layout_constraintStart_toStartOf="@+id/itemDescription" />


        <EditText
            android:id="@+id/itemDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:autofillHints="Description"
            android:ems="10"
            android:background="@color/gray"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lines="12"
            android:padding="10sp"
            android:text="@={viewModel.description}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTitle"
            tools:ignore="SpeakableTextPresentCheck"
            tools:text="@tools:sample/lorem/random" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btDismiss"
            android:text="@string/cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="175dp"
            android:layout_height="61dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="28dp"
            android:background="@color/teal_700"
            android:textColor="@color/white"
            app:flow_verticalAlign="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btAdd"
            android:text="@string/edit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="175dp"
            android:layout_height="61dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="28dp"
            android:background="@color/teal_700"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>