<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="hu.bme.aut.shopper.viewmodel.DetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:layout_marginTop="52dp"
            android:padding="10dp"
            android:text="@{viewModel.item.content}"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/first_names" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="374dp"
            android:layout_height="49dp"
            android:layout_marginTop="29dp"
            android:lines="12"
            android:padding="10dp"
            android:text="@string/description"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="379dp"
            android:layout_height="253dp"
            android:layout_marginTop="12dp"
            android:background="@color/gray"
            android:lines="12"
            android:padding="10dp"
            android:text="@{viewModel.item.description}"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="227dp"
            android:layout_height="31dp"
            android:layout_marginTop="28dp"
            android:background="@color/gray"
            android:text="@{viewModel.item.created}"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            tools:text="@tools:sample/date/mmddyy" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="142dp"
            android:layout_height="30dp"
            android:layout_marginTop="29dp"
            android:background="@color/gray"
            android:text="@string/created"
            android:textAlignment="textStart"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            tools:text="@tools:sample/date/mmddyy" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="175dp"
            android:layout_height="61dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="28dp"
            android:background="@color/teal_700"
            android:text="@string/update"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="175dp"
            android:layout_height="61dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="28dp"
            android:background="@color/teal_700"
            android:text="@string/delete"
            android:textColor="@color/white"
            app:flow_verticalAlign="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>